[gd_scene load_steps=14 format=3 uid="uid://bkys348mactw2"]

[ext_resource type="Script" path="res://Scripts/ScreenManagement/ScreenLogic.gd" id="1_4oukr"]
[ext_resource type="Script" path="res://Scripts/GridLogic.gd" id="1_ywtrj"]
[ext_resource type="Texture2D" uid="uid://bjqluj600yhja" path="res://Art/Map_ResolutionClearance.png" id="2_hsx3y"]
[ext_resource type="Texture2D" uid="uid://ll2r6k84b1vw" path="res://Art/UI/Background/Background_default_Light_textured_v2.png" id="3_rkf2x"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="4_1cxrf"]
[ext_resource type="Texture2D" uid="uid://c8qlsh0oxe5md" path="res://Art/GridTileSet2.png" id="4_qgsc6"]
[ext_resource type="Script" path="res://Scripts/Game/States/GameEmptyState.gd" id="5_wmt6j"]
[ext_resource type="Script" path="res://Scripts/Game/States/GamePlayState.gd" id="6_jk8at"]
[ext_resource type="Script" path="res://Scripts/Game/States/GameWinState.gd" id="7_bviq6"]
[ext_resource type="PackedScene" uid="uid://cosap7ka4jc6c" path="res://ScenePrefabs/PuzzleUiManager.tscn" id="8_40gag"]
[ext_resource type="Script" path="res://Scripts/Game/States/GameEditState.gd" id="8_e6fwe"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5322b"]
texture = ExtResource("4_qgsc6")
texture_region_size = Vector2i(120, 120)
0:0/0 = 0
0:0/0/modulate = Color(1, 1, 1, 0)
1:0/0 = 0
1:0/0/modulate = Color(0.894118, 0.823529, 0.627451, 0.25098)
2:0/0 = 0
2:0/0/modulate = Color(0.894118, 0.823529, 0.627451, 1)
0:1/0 = 0
0:1/0/modulate = Color(0.392157, 0.392157, 0.392157, 1)
0:2/0 = 0
1:1/0 = 0
1:2/0 = 0
2:1/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_ntt55"]
tile_size = Vector2i(120, 120)
sources/0 = SubResource("TileSetAtlasSource_5322b")

[node name="MainLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4oukr")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hsx3y")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect2" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rkf2x")
patch_margin_left = 300
patch_margin_top = 250
patch_margin_right = 250
patch_margin_bottom = 250

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -345.0
offset_top = -446.0
offset_right = -55.0
offset_bottom = -55.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.572549, 0.47451, 0.235294, 1)
theme_override_font_sizes/font_size = 20
text = "Controls:
LMB DRAG to grab & move pieces
RMB or AD to rotate held piece
Editing:
Drag pieces from the library onto the grid
Hovering over library shows piece descriptions
Drag pieces off the grid into the red to delete"
vertical_alignment = 2
autowrap_mode = 3

[node name="DeletionZone" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.196078)

[node name="GridCenter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridMap" type="TileMap" parent="GridCenter" node_paths=PackedStringArray("gameManager")]
position = Vector2(20, 20)
tile_set = SubResource("TileSet_ntt55")
rendering_quadrant_size = 120
format = 2
layer_0/tile_data = PackedInt32Array(-131075, 0, 0, -65539, 0, 0, -65538, 0, 0, -196612, 0, 0, -131076, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, 262140, 0, 0, -196611, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, -196610, 0, 0, -131074, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, -262143, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, -262142, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, -262141, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0)
script = ExtResource("1_ywtrj")
gameManager = NodePath("../../GameManager")
gridCenterOffset = Vector2(960, 540)
startingPositions = Array[Vector2i]([Vector2i(6, 0), Vector2i(-6, 0), Vector2i(6, 4), Vector2i(-6, 4), Vector2i(6, -4), Vector2i(-6, -4), Vector2i(0, 6), Vector2i(0, -6)])

[node name="GameManager" type="Node2D" parent="." node_paths=PackedStringArray("grid", "deletionZone", "myScreen", "empty_state", "play_state", "win_state", "edit_state")]
script = ExtResource("4_1cxrf")
grid = NodePath("../GridCenter/GridMap")
deletionZone = NodePath("../DeletionZone")
myScreen = NodePath("..")
held_piece_flat_speed = 1.0
held_piece_distance_speed = 15.0
held_piece_settle_delay = 0.01
held_piece_settle_animation_duration = 0.25
place_piece_delay = 0.4
empty_state = NodePath("States/GameEmptyState")
play_state = NodePath("States/GamePlayState")
win_state = NodePath("States/GameWinState")
edit_state = NodePath("States/GameEditState")

[node name="States" type="Node2D" parent="GameManager"]

[node name="GameEmptyState" type="Node2D" parent="GameManager/States"]
script = ExtResource("5_wmt6j")

[node name="GamePlayState" type="Node2D" parent="GameManager/States"]
script = ExtResource("6_jk8at")

[node name="GameWinState" type="Node2D" parent="GameManager/States"]
script = ExtResource("7_bviq6")

[node name="GameEditState" type="Node2D" parent="GameManager/States"]
script = ExtResource("8_e6fwe")

[node name="PuzzleUiManager" parent="." node_paths=PackedStringArray("controller") instance=ExtResource("8_40gag")]
layout_mode = 1
controller = NodePath("../GameManager")

[node name="MainScreen" parent="PuzzleUiManager" index="0" node_paths=PackedStringArray("controller")]
controller = NodePath("../../GameManager")

[connection signal="initialized_event" from="GameManager" to="PuzzleUiManager" method="on_puzzle_initialized"]
[connection signal="state_changed_event" from="GameManager" to="PuzzleUiManager" method="on_puzzle_state_changed"]

[editable path="PuzzleUiManager"]
